--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/am-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/am-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aastha Mahindra</title>
     <meta name="description" content="Software Engineer specializing in backend development with JavaScript and Python" />
